# groupeffect-pypi

./: .gitignore  LICENSE  README.md  docker-compose.yaml  lintmelocal.sh
.github/workflows/: superlinter.yml
archive/: __effectcopy.py  __pyproject.toml  settings.py  tasks.py
archive/__package/: MANIFEST.in  VERSION.json
framework/: .pypirc_example
framework/pypi/: Dockerfile
framework/pypi/app/: dev.sh  requirements.txt  run.sh  setup.sh
framework/pypi/app/package/: MANIFEST.in  README.md  VERSION.json  manage.py  pyproject.toml  setup.cfg  setup.py
framework/pypi/app/package/groupeffect/: admin.py  apps.py  models.py
framework/pypi/app/package/groupeffect/management/commands/: effect.py
framework/pypi/app/package/groupeffect/management/configuration/: default.json  groupeffect.json
framework/pypi/app/package/groupeffect/management/tasks/: default.py
framework/pypi/app/package/groupeffect/management/templates/: model.txt
framework/pypi/app/package/groupeffect/management/templates/default/: database.txt  serializers.py
framework/pypi/app/package/groupeffect/management/templates/sdo/: database.py  urls.py  views.py
framework/pypi/app/package/groupeffect/serializers/: main.py
framework/pypi/app/package/groupeffect/templates/groupeffect/default/: database.txt  serializers.txt  tests.txt  urls.txt  views.txt
framework/pypi/app/package/groupeffect/templates/groupeffect/scripts/: serializers.txt
framework/pypi/app/package/groupeffect/templates/groupeffect/web/: api.html
framework/pypi/app/package/groupeffect/templates/scripts/default/: database.txt
framework/pypi/app/package/groupeffect/urls/: main.py
framework/pypi/app/package/groupeffect/views/: main.py
framework/pypi/app/package/src/groupeffect/: framework.py
framework/pypi/app/package/src/groupeffect/semantic/tools/: rdf.py
framework/pypi/app/package/tests/testapp/api/database/: organization.py
framework/pypi/app/package/tests/testapp/api/serializers/: organization.py
framework/pypi/app/package/tests/testapp/api/tests/: organization.py
framework/pypi/app/package/tests/testapp/api/urls/: organization.py
framework/pypi/app/package/tests/testapp/api/views/: organization.py
framework/pypi/app/package/tests/testapp/development/: apps.py
framework/pypi/app/package/tests/testapp/development/management/commands/: effect.py
framework/pypi/app/package/tests/testapp/testapp/: asgi.py  settings.py  wsgi.py
framework/pypi/app/test_package/: LICENSE  pyproject.toml
framework/pypi/app/test_package/src/groupeffect_test/: framework.py
