[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groupeffect"
version = "0.1.0"
description = "reusable scripts for development"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
  { name="Amir Yousefi" },
]

[project.urls]
"Homepage" = "https://github.com/Groupeffect"
