[metadata]
name = groupeffect
version = 0.1.1
description = A Django app to load dev stuff.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Groupeffect/groupeffect-pypi
author = Amir Yousefi
author_email = groupeffect.public@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django==4.2.*
    djangorestframework==3.14.*

    
