[metadata]
name = groupeffect
version = 0.2.4
description = A Django app for fast api development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Groupeffect/groupeffect-pypi
author = Amir Yousefi
author_email = groupeffect.public@gmail.com
license = MIT
classifiers =
        Development Status :: 2 - Pre-Alpha
        Environment :: Web Environment
        Framework :: Django
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Framework :: Django :: 4.0
        Framework :: Django :: 4.1
        Framework :: Django :: 4.2
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3 :: Only
        Topic :: Internet :: WWW/HTTP

[install_requires]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django==4.2.*
    djangorestframework==3.14.*

    
